# sf_data_science

./: .gitignore  README.md  pyproject.toml  requirements.txt
project-1/: Project-1._HH_analysis.ipynb  README.md
project-2/: Project_2_Ноутбук_решение.ipynb
python-08/guess-number-task/: README.md  game.ipynb  game_v3.py
